k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ideas-api
  labels:
    app: ideas-api
    environment: dev
